src/test/ui/unboxed-closures/unboxed-closure-no-cyclic-sig.stderr
error[E0308]: arguments to this function are incorrect
  --> $DIR/unboxed-closure-no-cyclic-sig.rs:8:5
   |
LL |     g(|_| {  });
   |     ^^--------^
   |       |
   |       expected `_`
   |
note: function defined here
  --> $DIR/unboxed-closure-no-cyclic-sig.rs:5:4
   |
LL | fn g<F>(_: F) where F: FnOnce(Option<F>) {}
   |    ^    ----
help: provide an argument of the correct type
   |
LL |     g({_});
   |     ^^^^^^

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
